Fix: spacing address row (#22)

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -86,14 +86,22 @@
 .ccip-chain-hero__feeTokens__list {
   display: flex;
   align-items: center;
-  gap: var(--space-12x);
+  gap: var(--space-20x);
 }
 
 .ccip-chain-hero__feeTokens__item {
   display: flex;
   align-items: center;
-  gap: var(--space-1x);
-  color: #151a23;
+  gap: var(--space-2x);
+  color: var(--gray-900);
+}
+
+.ccip-chain-hero__feeTokens__native-gas-token {
+  font-style: normal;
+  font-weight: var(--font-weight-normal);
+  font-size: var(--space-4x);
+  line-height: var(--space-6x);
+  color: var(--gray-600);
 }
 
 .ccip-chain-hero__feeTokens__item a {
